Sweep the worker's own worktrees
Since W-3 a member's worktrees live on their machine, where the team's
Sweeper cannot reach them, and nothing removed them. WorkerSweeper runs
beside the loop, removes a worktree untouched for 7 days, and keeps every
one that still holds work — it knows no task phases, so it never discards.
WorkerLoop's injectable-interval constructor is public, so the two-computer
test stops waiting out real 10 s ticks.

Claude-Session: https://claude.ai/code/session_015fG5eDykx622Y3Mp2bA28z